--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,3 @@
-# This is Git's per-user configuration file.
-[core]
-# Please adapt and uncomment the following lines:
-	user = Willy Nolan
-	email = willy@willynolan.com
 [user]
 	email = willy@willynolan.com
-[push]
-	default = simple
+	name = computersarecool
