--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,11 @@ set-option -g default-terminal "screen-256color"
 # Set reload key to r
 # bind r source-file ~/.tmux.conf
 
+# Change prefix
+unbind-key C-b
+set -g prefix 'C-\'
+bind-key 'C-\' send-prefix
+
 # Count sessions start at 1
 set -g base-index 1
 
