Makes status bar have double colons equally spaced and white

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 # Set colors
 set-option -g default-terminal "screen-256color"
 
+# Set status bar option
+set-option -g display-time 4000
+
 # Set reload key to r
 #bind r source-file ~/.tmux.conf
 
