--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ unbind-key C-b
 set -g prefix 'C-\'
 bind-key 'C-\' send-prefix
 
+# Set nested session prefix
+bind-key -n C-a send-prefix
+
 # Count sessions start at 1
 set -g base-index 1
 
@@ -26,6 +29,6 @@ set -g status-fg white
 set -g status-interval 5 
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::#[fg=yellow]#(curl ipecho.net/plain;echo) :: "
+set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::#[fg=yellow]#(curl ipecho.net/plain;echo)::"
 set -g status-justify left
 set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
