Changes nested prefix to not clash with emacs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ set -g prefix 'C-\'
 bind-key 'C-\' send-prefix
 
 # Set nested session prefix
-bind-key -n C-a send-prefix
+bind-key -n C-q send-prefix
 
 # Count sessions start at 1
 set -g base-index 1
