--- a/service_files/emacs.service
+++ b/service_files/emacs.service
@@ -1,13 +1,13 @@
 [Unit]
 Description=Emacs: the extensible, self-documenting text editor
-Documentatin=man:emacs(1) info:Emacs
+Documentation=man:emacs(1) info:Emacs
 
 
 [Service]
 Type=forking
 User=optonox
 ExecStart=/usr/bin/emacs --daemon
-ExecStop=/usr/bin/emacsclient --eval "(progn (setq kill-emacs-hook nil) (kill-emacs))"
+ExecStop=/usr/bin/emacsclient --eval "(kill-emacs)"
 Restart=always
 TimeoutStartSec=0
 
