Simplifies and updates config

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,8 +5,5 @@
 	editor = emacsclient
 [push]
 	default = matching
-[filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
+[credential]
+	helper = cache --timeout=23600
